# BAL

./: LICENSE  Makefile.am  configure.ac
bal/: .sconsign.dblite  Doxyfile  Makefile.am  TODO  configure.ac
bal/examples/: Makefile.am  basin.cpp  bifdiag.cpp  bifdiagLyap.cpp  bifparams.cpp  dynasty.cpp  dynsys.cpp  eye.cpp  hrLyap.cpp  interp.cpp  interpsystem.cpp  loggers.cpp  lorenz.cpp  lorenzLyap.cpp  obj.cpp  params.cpp  pll.cpp  rosslerLyap.cpp  solver.cpp
bal/examples/pll-configs/: mos.cfg  polar-locking-2d.cfg  polar-locking.cfg  polar-saturation.cfg  star-locking-1d.cfg  star.cfg
bal/matlab/: Classifier.m  ClassifyEntry.m  PlotterColormap.m
bal/python/: ballib.py  bifdiag.py  pybal.cpp  pybal.h  pybal.h.in  setup.py.in
bal/python/examples/: basin.py  bifdiag.py  biflyap.py  eye.py  ftle.py  lyap.py  pll.py  solver.py
bal/python/examples/auto/: simple_auto.py
bal/python/examples/pll-configs/: polar-locking.cfg
bal/src/: .sconsign.dblite  Makefile.am  balBifurcationDiagram.cpp  balBifurcationDiagram.h  balBifurcationParameters.cpp  balBifurcationParameters.h  balCommon.h  balDoubleGyre.cpp  balDoubleGyre.h  balDynamicalSystem.cpp  balDynamicalSystem.h  balDynasty.cpp  balDynasty.h  balEye.cpp  balEye.h  balHeartNeuron.cpp  balHeartNeuron.h  balHindmarshRose.cpp  balHindmarshRose.h  balInterp1D.cpp  balInterp1D.h  balInterp2D.cpp  balInterp2D.h  balInterp3D.cpp  balInterp3D.h  balInterpSystem.cpp  balInterpSystem.h  balInterpolator.cpp  balInterpolator.h  balLogger.cpp  balLogger.h  balLorenz.cpp  balLorenz.h  balODESolver.cpp  balODESolver.h  balObject.cpp  balObject.h  balPLL.cpp  balPLL.h  balParameters.cpp  (+8 more)
branches/0.9/: Doxyfile  configure.ac
branches/0.9/examples/: Makefile.am  bifdiag.cpp  interp.cpp  loggers.cpp  solver.cpp
branches/0.9/matlab/: ClassifyEntry.m  plotcobweb.m
branches/0.9/src/: balBifurcationDiagram.cpp  balBifurcationDiagram.h  balBifurcationParameters.cpp  balBifurcationParameters.h  balCommon.h  balHindmarshRose.h  balInterp2D.h  balInterpSystem.h  balInterpolator.h  balODESolver.cpp  balObject.h  balParameters.cpp  balParameters.h  balRossler.h
branches/unstable/: CHANGES  TODO  configure.ac
branches/unstable/examples/: Makefile.examples  bifdiag.cpp  bifparams.cpp  dynsys.cpp  loggers.cpp  obj.cpp  params.cpp  solver.cpp
branches/unstable/python/: setup.py.in
branches/unstable/python/examples/: ftle.py
branches/unstable/python/examples/pll-configs/: mos.cfg  polar-locking-2d.cfg
branches/unstable/python/pybal/: util.py
branches/unstable/src/: balBifurcationDiagram.cpp  balBifurcationDiagram.h  balBifurcationParameters.cpp  balBifurcationParameters.h  balDynamicalSystem.cpp  balDynamicalSystem.h  balDynasty.h  balHindmarshRose.cpp  balHindmarshRose.h  balInterp3D.cpp  balLogger.cpp  balLogger.h  balLorenz.cpp  balLorenz.h  balObject.cpp  balObject.h  balParameters.cpp  balParameters.h  balSolution.cpp  balSolution.h
examples/: .gitignore  Makefile.am  Makefile.examples  basin.cpp  bifdiag.cpp  bifdiagLyap.cpp  bifparams.cpp  dynasty.cpp  dynsys.cpp  hrLyap.cpp  interpsystem.cpp  loggers.cpp  lorenz.cpp  lorenzLyap.cpp  params.cpp  pll.cpp  rosslerLyap.cpp  solver.cpp
examples/pll-configs/: polar-locking.cfg
python/: .gitignore
python/examples/: basin.py  pll.py
python/examples/pll-configs/: polar-saturation.cfg  star-locking-1d.cfg
src/: Makefile.am  TODO  balBifurcationDiagram.cpp  balBifurcationDiagram.h  balBifurcationParameters.cpp  balBifurcationParameters.h  balCommon.h  balDoubleGyre.cpp  balDoubleGyre.h  balDynamicalSystem.cpp  balDynamicalSystem.h  balDynasty.cpp  balDynasty.h  balHeartNeuron.cpp  balHeartNeuron.h  balHindmarshRose.cpp  balHindmarshRose.h  balInterp1D.cpp  balInterp1D.h  balInterp2D.cpp  balInterp2D.h  balInterp3D.cpp  balInterp3D.h  balInterpSystem.cpp  balInterpSystem.h  balInterpolator.cpp  balInterpolator.h  balLogger.cpp  balLogger.h  balLorenz.cpp  balLorenz.h  balODESolver.cpp  balODESolver.h  balObject.cpp  balObject.h  balPLL.cpp  balPLL.h  balParameters.cpp  balParameters.h  balRossler.cpp  (+3 more)
trunk/: INSTALL  Makefile.am  configure.ac
trunk/examples/: bifparams.cpp  dynasty.cpp  solver.cpp
trunk/examples/pll-configs/: star-locking-1d.cfg
trunk/matlab/: H5Read.m
trunk/python/: pybal.cpp
trunk/python/examples/auto/: HR.c
trunk/python/examples/pll-configs/: star.cfg
trunk/src/: Makefile.am  balBifurcationDiagram.cpp  balBifurcationParameters.h  balHindmarshRose.cpp  balInterpSystem.h  balInterpolator.h  balLogger.h  balODESolver.cpp  balODESolver.h  balSolution.h
trunk/unstable/: Makefile.orig
trunk/unstable/examples/pll-configs/: polar-saturation.cfg
trunk/unstable/matlab/: H5ReadAndClassify.m
trunk/unstable/python/examples/auto/: c.lc
trunk/unstable/src/: balBifurcationDiagram.h  balDoubleGyre.cpp  balDynamicalSystem.cpp  balInterpolator.cpp  balSolution.h  header.txt
unstable/: README
unstable/examples/: basin.cpp  bifparams.cpp  pll.cpp
unstable/examples/pll-configs/: mos.cfg  polar-locking-2d.cfg
unstable/matlab/: Bif1D.m  Classifier.m
unstable/python/examples/pll-configs/: polar-locking.cfg
unstable/src/: balLogger.h  balObject.h  balParameters.h
